--- a/Q4_Sentiment_Analysis.ipynb
+++ b/Q4_Sentiment_Analysis.ipynb
@@ -3,6 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
+      "state": {},
       "provenance": [],
       "gpuType": "T4",
       "authorship_tag": "ABX9TyMT20vxmDOFPUGfBxOz17f9",
